--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# gitignore settings for node.js projects
+
 # Logs
 logs
 *.log
@@ -73,7 +75,6 @@ web_modules/
 .yarn-integrity
 
 # dotenv environment variable files
-.env
 .env.development.local
 .env.test.local
 .env.production.local
@@ -128,3 +129,5 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+public/assets/reviewPics/
