--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGODB_URI=mongodb+srv://admin:12345@archereats.tt9astc.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://ccapdev:KrGbAix5Ktvvsv0i@archereats.it3lsy0.mongodb.net/?retryWrites=true&w=majority
 DB_NAME=ArcherEats
 SERVER_PORT=3000
