--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGODB_URI=mongodb+srv://ccapdev:KrGbAix5Ktvvsv0i@archereats.it3lsy0.mongodb.net/?retryWrites=true&w=majority
+#MONGODB_URI=mongodb+srv://stsweng:7tmWTlSQJzfGVqGH@archereatstestdb.zygkrow.mongodb.net/?retryWrites=true&w=majority&appName=ArcherEatsTestDB
 DB_NAME=ArcherEats
 SERVER_PORT=3000
