--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "test": "jest"
   },
   "overrides": {
     "semver": "^7.5.3"
@@ -25,5 +24,9 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
     "ol": "^8.2.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0"
   }
 }
