+ store media files to aws s3

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 MONGODB_URI=mongodb+srv://ccapdev:KrGbAix5Ktvvsv0i@archereats.it3lsy0.mongodb.net/?retryWrites=true&w=majority
 DB_NAME=ArcherEats
 SERVER_PORT=3000
+BUCKET_NAME=`archereats`
+BUCKET_REGION=`ap-southeast-2`
+ACCESS_KEY=AKIAU6GDU2DOL6JE2USO
+SECRET_ACCESS_KEY=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
