--- a/package.json
+++ b/package.json
@@ -24,9 +24,15 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
     "jsonwebtoken": "^9.0.1",
-    "mongodb": "^5.7.0",
+    "mongodb": "^5.9.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
     "ol": "^8.2.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
