--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js",
-    "serve": "nodemon index.js"
+    "test": "jest"
   },
   "overrides": {
     "semver": "^7.5.3"
@@ -19,6 +17,7 @@
     "@aws-sdk/s3-request-presigner": "^3.523.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "chromedriver": "^123.0.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -27,12 +26,10 @@
     "mongodb": "^5.9.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
-    "ol": "^8.2.0"
+    "ol": "^8.2.0",
+    "selenium-webdriver": "^4.19.0"
   },
   "devDependencies": {
     "jest": "^29.7.0"
-  },
-  "scripts": {
-    "test": "jest"
   }
 }
