--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js",
-    "serve": "nodemon index.js"
+    "serve": "nodemon index.js",
+    "test": "jest"
   },
   "overrides": {
     "semver": "^7.5.3"
@@ -31,8 +31,5 @@
   },
   "devDependencies": {
     "jest": "^29.7.0"
-  },
-  "scripts": {
-    "test": "jest"
   }
 }
